@@ -23,6 +23,11 @@ $Id$
     * Updates to build on Haiku.
       Luc 'Begasus' Schrijvers <begasus@gmail.com>
 
+    * Replaced KDE (older, KDE4, in fact) specific icon and
+      launcher (.desktop file) installation & uninstallaton
+      invocations in Makefile with those that use Freedesktop.org
+      `xdg-...` tools.
+
   * Other Improvements
     ------------------
     * Added ability to move color palette options to the end of
